@@ -50,15 +50,13 @@ import org.apache.kafka.storage.internals.checkpoint.CleanShutdownFileHandler;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
 
 import java.io.File;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -74,6 +72,7 @@ import scala.collection.mutable.HashMap;
 import static org.apache.kafka.test.TestUtils.DEFAULT_MAX_WAIT_MS;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarness implements Logging {
@@ -138,23 +137,22 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
         if (adminClient != null) adminClient.close();
     }
 
-    @ParameterizedTest
-    @ValueSource(strings = {"kraft"})
-    public void testHighWatermarkShouldNotAdvanceIfUnderMinIsr(String quorum) throws ExecutionException, InterruptedException {
+    @Test
+    public void testHighWatermarkShouldNotAdvanceIfUnderMinIsr() throws ExecutionException, InterruptedException {
         adminClient.createTopics(
-            Collections.singletonList(new NewTopic(testTopicName, 1, (short) 4))).all().get();
+            List.of(new NewTopic(testTopicName, 1, (short) 4))).all().get();
         TestUtils.waitForPartitionMetadata(brokers(), testTopicName, 0, 1000);
 
         ConfigResource configResource = new ConfigResource(ConfigResource.Type.TOPIC, testTopicName);
         Collection<AlterConfigOp> ops = new ArrayList<>();
         ops.add(new AlterConfigOp(new ConfigEntry(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, "3"), AlterConfigOp.OpType.SET));
-        Map<ConfigResource, Collection<AlterConfigOp>> configOps = Collections.singletonMap(configResource, ops);
+        Map<ConfigResource, Collection<AlterConfigOp>> configOps = Map.of(configResource, ops);
         // alter configs on target cluster
         adminClient.incrementalAlterConfigs(configOps).all().get();
         Producer producer = null;
         Consumer consumer = null;
         try {
-            TopicDescription testTopicDescription = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            TopicDescription testTopicDescription = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName);
             TopicPartitionInfo topicPartitionInfo = testTopicDescription.partitions().get(0);
             List<Node> initialReplicas = topicPartitionInfo.replicas();
@@ -178,7 +176,7 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
             consumerProps.putIfAbsent(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
             consumerProps.putIfAbsent(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
             consumer = new KafkaConsumer<>(consumerProps);
-            consumer.subscribe(Collections.singleton(testTopicName));
+            consumer.subscribe(Set.of(testTopicName));
 
             producer.send(new ProducerRecord<>(testTopicName, "0", "0")).get();
             waitUntilOneMessageIsConsumed(consumer);
@@ -225,22 +223,21 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
         );
     }
 
-    @ParameterizedTest
-    @ValueSource(strings = {"kraft"})
-    public void testElrMemberCanBeElected(String quorum) throws ExecutionException, InterruptedException {
+    @Test
+    public void testElrMemberCanBeElected() throws ExecutionException, InterruptedException {
         adminClient.createTopics(
-            Collections.singletonList(new NewTopic(testTopicName, 1, (short) 4))).all().get();
+            List.of(new NewTopic(testTopicName, 1, (short) 4))).all().get();
         TestUtils.waitForPartitionMetadata(brokers(), testTopicName, 0, 1000);
 
         ConfigResource configResource = new ConfigResource(ConfigResource.Type.TOPIC, testTopicName);
         Collection<AlterConfigOp> ops = new ArrayList<>();
         ops.add(new AlterConfigOp(new ConfigEntry(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, "3"), AlterConfigOp.OpType.SET));
-        Map<ConfigResource, Collection<AlterConfigOp>> configOps = Collections.singletonMap(configResource, ops);
+        Map<ConfigResource, Collection<AlterConfigOp>> configOps = Map.of(configResource, ops);
         // alter configs on target cluster
         adminClient.incrementalAlterConfigs(configOps).all().get();
 
         try {
-            TopicDescription testTopicDescription = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            TopicDescription testTopicDescription = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName);
             TopicPartitionInfo topicPartitionInfo = testTopicDescription.partitions().get(0);
             List<Node> initialReplicas = topicPartitionInfo.replicas();
@@ -262,7 +259,7 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
                 return isrSize == 0 && elrSize == 3;
             });
 
-            topicPartitionInfo = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            topicPartitionInfo = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName).partitions().get(0);
             assertEquals(1, topicPartitionInfo.lastKnownElr().size(), topicPartitionInfo.toString());
             int expectLastKnownLeader = initialReplicas.get(3).id();
@@ -272,14 +269,14 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
             // Restart one broker of the ELR and it should be the leader.
 
             int expectLeader = topicPartitionInfo.elr().stream()
-                .filter(node -> node.id() != expectLastKnownLeader).collect(Collectors.toList()).get(0).id();
+                .filter(node -> node.id() != expectLastKnownLeader).toList().get(0).id();
 
             startBroker(expectLeader);
             waitForIsrAndElr((isrSize, elrSize) -> {
                 return isrSize == 1 && elrSize == 2;
             });
 
-            topicPartitionInfo = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            topicPartitionInfo = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName).partitions().get(0);
             assertEquals(0, topicPartitionInfo.lastKnownElr().size(), topicPartitionInfo.toString());
             assertEquals(expectLeader, topicPartitionInfo.leader().id(), topicPartitionInfo.toString());
@@ -292,7 +289,7 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
                 return isrSize == 3 && elrSize == 0;
             });
 
-            topicPartitionInfo = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            topicPartitionInfo = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName).partitions().get(0);
             assertEquals(0, topicPartitionInfo.lastKnownElr().size(), topicPartitionInfo.toString());
             assertEquals(expectLeader, topicPartitionInfo.leader().id(), topicPartitionInfo.toString());
@@ -301,22 +298,21 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
         }
     }
 
-    @ParameterizedTest
-    @ValueSource(strings = {"kraft"})
-    public void testElrMemberShouldBeKickOutWhenUncleanShutdown(String quorum) throws ExecutionException, InterruptedException {
+    @Test
+    public void testElrMemberShouldBeKickOutWhenUncleanShutdown() throws ExecutionException, InterruptedException {
         adminClient.createTopics(
-            Collections.singletonList(new NewTopic(testTopicName, 1, (short) 4))).all().get();
+            List.of(new NewTopic(testTopicName, 1, (short) 4))).all().get();
         TestUtils.waitForPartitionMetadata(brokers(), testTopicName, 0, 1000);
 
         ConfigResource configResource = new ConfigResource(ConfigResource.Type.TOPIC, testTopicName);
         Collection<AlterConfigOp> ops = new ArrayList<>();
         ops.add(new AlterConfigOp(new ConfigEntry(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, "3"), AlterConfigOp.OpType.SET));
-        Map<ConfigResource, Collection<AlterConfigOp>> configOps = Collections.singletonMap(configResource, ops);
+        Map<ConfigResource, Collection<AlterConfigOp>> configOps = Map.of(configResource, ops);
         // alter configs on target cluster
         adminClient.incrementalAlterConfigs(configOps).all().get();
 
         try {
-            TopicDescription testTopicDescription = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            TopicDescription testTopicDescription = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName);
             TopicPartitionInfo topicPartitionInfo = testTopicDescription.partitions().get(0);
             List<Node> initialReplicas = topicPartitionInfo.replicas();
@@ -332,7 +328,7 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
             waitForIsrAndElr((isrSize, elrSize) -> {
                 return isrSize == 0 && elrSize == 3;
             });
-            topicPartitionInfo = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            topicPartitionInfo = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName).partitions().get(0);
 
             int brokerToBeUncleanShutdown = topicPartitionInfo.elr().get(0).id();
@@ -350,9 +346,9 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
             waitForIsrAndElr((isrSize, elrSize) -> {
                 return isrSize == 0 && elrSize == 2;
             });
-            topicPartitionInfo = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            topicPartitionInfo = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName).partitions().get(0);
-            assertTrue(topicPartitionInfo.leader() == null);
+            assertNull(topicPartitionInfo.leader());
             assertEquals(1, topicPartitionInfo.lastKnownElr().size());
         } finally {
             restartDeadBrokers(false);
@@ -362,22 +358,21 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
     /*
         This test is only valid for KIP-966 part 1. When the unclean recovery is implemented, it should be removed.
      */
-    @ParameterizedTest
-    @ValueSource(strings = {"kraft"})
-    public void testLastKnownLeaderShouldBeElectedIfEmptyElr(String quorum) throws ExecutionException, InterruptedException {
+    @Test
+    public void testLastKnownLeaderShouldBeElectedIfEmptyElr() throws ExecutionException, InterruptedException {
         adminClient.createTopics(
-            Collections.singletonList(new NewTopic(testTopicName, 1, (short) 4))).all().get();
+            List.of(new NewTopic(testTopicName, 1, (short) 4))).all().get();
         TestUtils.waitForPartitionMetadata(brokers(), testTopicName, 0, 1000);
 
         ConfigResource configResource = new ConfigResource(ConfigResource.Type.TOPIC, testTopicName);
         Collection<AlterConfigOp> ops = new ArrayList<>();
         ops.add(new AlterConfigOp(new ConfigEntry(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, "3"), AlterConfigOp.OpType.SET));
-        Map<ConfigResource, Collection<AlterConfigOp>> configOps = Collections.singletonMap(configResource, ops);
+        Map<ConfigResource, Collection<AlterConfigOp>> configOps = Map.of(configResource, ops);
         // alter configs on target cluster
         adminClient.incrementalAlterConfigs(configOps).all().get();
 
         try {
-            TopicDescription testTopicDescription = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            TopicDescription testTopicDescription = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName);
             TopicPartitionInfo topicPartitionInfo = testTopicDescription.partitions().get(0);
             List<Node> initialReplicas = topicPartitionInfo.replicas();
@@ -393,7 +388,7 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
             waitForIsrAndElr((isrSize, elrSize) -> {
                 return isrSize == 0 && elrSize == 3;
             });
-            topicPartitionInfo = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            topicPartitionInfo = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName).partitions().get(0);
             int lastKnownLeader = topicPartitionInfo.lastKnownElr().get(0).id();
 
@@ -410,15 +405,15 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
 
 
             // After remove the clean shutdown file, the broker should report unclean shutdown during restart.
-            topicPartitionInfo.replicas().stream().forEach(replica -> {
+            topicPartitionInfo.replicas().forEach(replica -> {
                 if (replica.id() != lastKnownLeader) startBroker(replica.id());
             });
             waitForIsrAndElr((isrSize, elrSize) -> {
                 return isrSize == 0 && elrSize == 1;
             });
-            topicPartitionInfo = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            topicPartitionInfo = adminClient.describeTopics(List.of(testTopicName))
                 .allTopicNames().get().get(testTopicName).partitions().get(0);
-            assertTrue(topicPartitionInfo.leader() == null);
+            assertNull(topicPartitionInfo.leader());
             assertEquals(1, topicPartitionInfo.lastKnownElr().size());
 
             // Now if the last known leader goes through unclean shutdown, it will still be elected.
@@ -430,7 +425,7 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
             TestUtils.waitUntilTrue(
                 () -> {
                     try {
-                        TopicPartitionInfo partition = adminClient.describeTopics(Collections.singletonList(testTopicName))
+                        TopicPartitionInfo partition = adminClient.describeTopics(List.of(testTopicName))
                             .allTopicNames().get().get(testTopicName).partitions().get(0);
                         if (partition.leader() == null) return false;
                         return partition.lastKnownElr().isEmpty() && partition.elr().isEmpty() && partition.leader().id() == lastKnownLeader;
@@ -450,7 +445,7 @@ public class EligibleLeaderReplicasIntegrationTest extends KafkaServerTestHarnes
         TestUtils.waitUntilTrue(
             () -> {
                 try {
-                    TopicDescription topicDescription = adminClient.describeTopics(Collections.singletonList(testTopicName))
+                    TopicDescription topicDescription = adminClient.describeTopics(List.of(testTopicName))
                         .allTopicNames().get().get(testTopicName);
                     TopicPartitionInfo partition = topicDescription.partitions().get(0);
                     return isIsrAndElrSizeSatisfied.apply(partition.isr().size(), partition.elr().size());
